LPS-163065 auto buildlang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Aller à cette version
 go-to-workspace=Aller à l'espace de travail
 go-to-x=Aller à {0}
 goal=Objectif
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Configuration personnalisée uniquement de la création de méthode de Google Analytics
 google-analytics-custom-configuration=Configuration personnalisée de Google Analytics
 google-analytics-id=Identifiant Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Définissez le montant et le type 
 set-the-display-order-of-child-pages=Définir l'ordre d'affichage des pages filles.
 set-the-display-order-of-news-feeds=Définir l'ordre d'affichage des flux de nouvelles.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Définir les valeurs suivantes pour filtrer les adresses Email associées avec d'autres adresses Email dans un répertoire.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Définissez les options personnalisées de la création de méthode de Google Analytics, qui sont utilisées pour ce jeu de pages.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Définissez les options personnalisées de Google Analytics, qui sont utilisées pour ce jeu de pages.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Définir l'identifiant de Google Analytics qui sera utilisé pour cet ensemble de pages.
