--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Ir a esta versión
 go-to-workspace=Go to Workspace (Automatic Copy)
 go-to-x=Ir para {0}
 goal=Obxectivo
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Create Method Only Custom Configuration (Automatic Copy)
 google-analytics-custom-configuration=Google Analytics Custom Configuration (Automatic Copy)
 google-analytics-id=ID de Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Ordenar as subseccións
 set-the-display-order-of-news-feeds=Ordenar as canles de novas
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Establece os valores seguintes para gardar os correos electrónicos asociados ao enderezo especificado á esquerda na carpeta indicada na dereita.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics create method's custom options that are used for this set of pages. (Automatic Copy)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics custom options that are used for this set of pages. (Automatic Copy)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Establece o ID de Google Analytics que será utilizada para este conxunto de páxinas.
