--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=इस संस्करण पर जाएं (Automatic T
 go-to-workspace=कार्यक्षेत्र पर जाएं
 go-to-x=Go to {0} (Automatic Copy)
 goal=लक्ष्य (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=गूगल एनालिटिक्स बनाएं मेथड केवल कस्टम कॉन्फ़िगरेशन (Automatic Translation)
 google-analytics-custom-configuration=गूगल एनालिटिक्स कस्टम कॉन्फ़िगरेशन (Automatic Translation)
 google-analytics-id=गूगल विश्लेषिकी आईडी
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=चाइल्ड पेजस का डिसप्ले ऑर्डर सेट करे.
 set-the-display-order-of-news-feeds=new feeds का डिसप्ले ऑर्डर सेट करे
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=फ़ोल्डर पर ईमेल पते से जुड़े ईमेल फ़िल्टर करने के लिए निम्नलिखित मान सेट करें. (Automatic Translation)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=सेट करें गूगल एनालिटिक्स विधि के कस्टम विकल्प बनाते हैं जिनका उपयोग पृष्ठों के इस सेट के लिए किया जाता है। (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=पेज के इस सेट के लिए इस्तेमाल किए जाने वाले गूगल एनालिटिक्स कस्टम ऑप्शन सेट करें। (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=गूगल Analytics आईडी को सेट करे ताकि यह इस पेज को सेट करने में यूज़ हो सके
