--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Pergi ke Versi ini
 go-to-workspace=Masuk ke Ruang Kerja (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=maksud (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Hanya Buat Konfigurasi Kustom Metode (Automatic Translation)
 google-analytics-custom-configuration=Konfigurasi Kustom Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Mengatur urutan tampilan Sub halaman.
 set-the-display-order-of-news-feeds=Mengatur urutan tampilan feed berita.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Tetapkan nilai berikut untuk menyaring email yang terkait dengan alamat email ke folder.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Tetapkan opsi kustom google Analytics membuat metode yang digunakan untuk kumpulan halaman ini. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Tetapkan opsi kustom Google Analytics yang digunakan untuk kumpulan halaman ini. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Tetapkan Google Analytics ID yang akan digunakan untuk set halaman ini.
