--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7263,6 +7263,8 @@ go-to-this-version=Vai a questa Versione
 go-to-workspace=Vai a Workspace
 go-to-x=Vai a {0}
 goal=traguardo (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Configurazione personalizzata solo metodo di Creazione di Google Analytics (Automatic Translation)
 google-analytics-custom-configuration=Configurazione personalizzata di Google Analytics (Automatic Translation)
 google-analytics-id=ID Google Analytics
@@ -14501,6 +14503,8 @@ set-the-discount-amount-and-the-discount-type=Impostare l'importo e il tipo di s
 set-the-display-order-of-child-pages=Imposta l'ordine di visualizzazione delle pagine figlie.
 set-the-display-order-of-news-feeds=Imposta l'ordine di visualizzazione dei feed delle notizie.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Imposta i seguenti valori per filtrare verso una cartella le email associate ad un indirizzo email.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Imposta le opzioni personalizzate del metodo di creazione di Google Analytics utilizzate per questo set di pagine. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Imposta le opzioni personalizzate di Google Analytics utilizzate per questo set di pagine. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Imposta l'ID di Google Analytics che sarà usata per questo insieme di pagine.
