--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=이 버전 가기
 go-to-workspace=워크플레이스 가기
 go-to-x={0} 가기
 goal=목표
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics 작성 메소드 사용자 정의 구성
 google-analytics-custom-configuration=구글 애널리틱스 커스텀 설정
 google-analytics-id=GoogleAnalytics식별
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=할인 금액과 할인 유형을 
 set-the-display-order-of-child-pages=아이 페이지의 전시 순서를 놓으십시요.
 set-the-display-order-of-news-feeds=뉴스 이송의 전시 순서를 놓으십시요.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=폴더에 전자 우편 주소에 회합되는 전자 우편을 거르기 위하여 뒤에 오는 가치를 놓으십시요.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=이 페이지 세트에 사용되는 Google Analytics 작성 메소드의 사용자 정의 옵션을 설정하십시오.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=이 페이지 집합에 사용되는 Google Analytics 사용자 정의 옵션을 설정합니다.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=페이지의 이 세트를 위해 사용될 것이다GoogleAnalytics식별을 놓으십시요.
