--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Перейти к этой версии
 go-to-workspace=Перейти к рабочему пространству (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=цель (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Создает метод только пользовательской конфигурации (Automatic Translation)
 google-analytics-custom-configuration=Пользовательская конфигурация Google Analytics (Automatic Translation)
 google-analytics-id=Идентификатор Google Analytics (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Установите порядок показа дочерних страниц.
 set-the-display-order-of-news-feeds=Установить порядок показа RSS.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Установите следующие значения для отбора почтовых сообщений в папки по адресу.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Установите пользовательские параметры Google Analytics, которые используются для этого набора страниц. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Установите пользовательские опции Google Analytics, которые используются для этого набора страниц. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Установите Google Analytics ID, который будет использован для этого набора страниц.
