--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Към тази версия (Automatic Translation)
 go-to-workspace=Отиди на работната област (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=цел (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Анализ създава само персонализирана конфигурация (Automatic Translation)
 google-analytics-custom-configuration=Персонализирана конфигурация на Google Анализ (Automatic Translation)
 google-analytics-id=Идентификационен номер на Google Анализ (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Настройка на реда на показване на подстраниците.
 set-the-display-order-of-news-feeds=Настройка на реда на показване на новините.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Настройка на следните стойности за филтриране на електронна поща, съдържаща електронни пощенски адреси към папка.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Задайте персонализираните опции на google Анализ за създаване на метода, които се използват за този набор от страници. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Задайте персонализираните опции на Google Анализ, които се използват за този набор от страници. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Настройка на Google Analytics ID, който ще се използва с този набор от страници.
