--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Ves a aquesta versió
 go-to-workspace=Ves a l'espai de treball
 go-to-x=Ves a {0}
 goal=Objectiu
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Mètode de creació de Google Analytics només amb configuració personalitzada
 google-analytics-custom-configuration=Configuració personalitzada de Google Analytics
 google-analytics-id=ID del Google Analytics
@@ -14502,6 +14504,8 @@ set-the-discount-amount-and-the-discount-type=Definiu l'import del descompte i e
 set-the-display-order-of-child-pages=Establiu l'ordre de visualització de les subpàgines.
 set-the-display-order-of-news-feeds=Establiu l'ordre de visualització dels canals de notícies.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Establiu els valors següents per filtrar els correus electrònics associats amb una adreça de correu a una carpeta.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Establiu les opcions personalitzades del mètode de creació de Google Analytics que s'utilitzaran per a aquest conjunt de pàgines.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Establiu les opcions personalitzades de Google Analytics que s'utilitzaran per a aquest conjunt de pàgines.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Introduïu l'ID del Google Analytics que s'utilitzarà per a aquest conjunt de pàgines.
