--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Gå til denne version
 go-to-workspace=Gå til arbejdsområde (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=mål (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Opret metode Kun brugerdefineret konfiguration (Automatic Translation)
 google-analytics-custom-configuration=Brugerdefineret konfiguration af Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics-id (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Angiv visningsrækkefølgen for undersider.
 set-the-display-order-of-news-feeds=Angiv visningsrækkefølgen for undersider.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Set the following values to filter emails associated with an email adresse to a folder.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Angiv Google Analytics-oprettelsesmetodens brugerdefinerede indstillinger, der bruges til dette sæt sider. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Angiv de brugerdefinerede indstillinger for Google Analytics, der bruges til dette sæt sider. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Angiv det Google Analytics-id, der bruges til dette sæt sider. (Automatic Translation)
