--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Zu dieser Version wechseln
 go-to-workspace=Zum Arbeitsbereich wechseln
 go-to-x=Gehe zu {0}
 goal=Ziel
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Benutzerdefinierte Konfiguration von Google Analytics Create-Methode
 google-analytics-custom-configuration=Benutzerdefinierte Konfiguration von Google Analytics
 google-analytics-id=Google Analytics-ID
@@ -14502,6 +14504,8 @@ set-the-discount-amount-and-the-discount-type=Rabatt und Rabatttyp festlegen. We
 set-the-display-order-of-child-pages=Anzeigereihenfolge der untergeordneten Seiten festlegen.
 set-the-display-order-of-news-feeds=Anzeigereihenfolge der Newsfeeds festlegen.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Geben Sie die folgenden Werte an, um E-Mails nach Adressen in Ordnern zu sortieren.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Benutzerdefinierte Optionen für Google Analytics Create-Methode angeben, die für diese Gruppe von Seiten verwendet werden sollen.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Benutzerdefinierte Optionen für Google Analytics angeben, die für diese Seiten verwendet werden sollen.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Google Analytics ID angeben, die für diese Seiten verwendet werden soll.
