--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Μετάβαση σε αυτήν την έκδοση
 go-to-workspace=Μεταβείτε στο χώρο εργασίας (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=τέρμα (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Το Google Analytics δημιουργεί μόνο προσαρμοσμένη διαμόρφωση μεθόδου (Automatic Translation)
 google-analytics-custom-configuration=Προσαρμοσμένη διαμόρφωση του Google Analytics (Automatic Translation)
 google-analytics-id=Ταυτότητα Analytics Google
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Ορισμός της σειράς εμφάνισης των σελίδων-παιδιών.
 set-the-display-order-of-news-feeds=Ορισμός της σειράς εμφάνισης των ροών ειδήσεων.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Ορισμός των ακόλουθων τιμών για φιλτρράρισμα emails που συνδέονται με μια διεύθυνση email και τοποθέτησής τους σε έναν φάκελο.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Ορίστε τις προσαρμοσμένες επιλογές της μεθόδου Google Analytics που χρησιμοποιούνται για αυτό το σύνολο σελίδων. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Ορίστε τις προσαρμοσμένες επιλογές του Google Analytics που χρησιμοποιούνται για αυτό το σύνολο σελίδων. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Ορισμός της ταυτότητας Google Analytics που θα χρησιμοποιηθεί για αυτό το σύνολο σελίδων.
