--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Ir a esta version
 go-to-workspace=Ir a espacio de trabajo
 go-to-x=Ir a {0}
 goal=Objetivo
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Solo configuración personalizada del método de creación de Google Analytics
 google-analytics-custom-configuration=Configuración personalizada de Google Analytics
 google-analytics-id=Identificador de Google Analytics
@@ -14502,6 +14504,8 @@ set-the-discount-amount-and-the-discount-type=Establezca la cantidad y el tipo d
 set-the-display-order-of-child-pages=Ordene las subsecciones.
 set-the-display-order-of-news-feeds=Ordene las fuentes de noticias.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Establezca los valores siguientes para guardar los correos electrónicos asociados a la direccion especificada a la izquerda en la carpeta indicada en la derecha.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Configure las opciones personalizadas del método de creación de Google Analytics usadas para este conjunto de páginas.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Configure las opciones personalizadas de Google Analytics usadas para este conjunto de páginas.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Establezca el identificador de Google Analytics que será utilizado para este conjunto de páginas.
