--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Mine sellele versioonile (Automatic Translation)
 go-to-workspace=Mine tööruumi (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=eesmärk (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Loo meetod ainult kohandatud konfiguratsioon (Automatic Translation)
 google-analytics-custom-configuration=Google Analyticsi kohandatud konfiguratsioon (Automatic Translation)
 google-analytics-id=Google Analyticsi ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Määra alamlehtede kuvamisjärjekord.
 set-the-display-order-of-news-feeds=Määra uudistevoogude kuvamisjärjekord.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Määra järgnevad väärtused, et filtreerida e-posti aadressiga seotud e-mailid kausta.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Määrake Google Analyticsi loomismeetodi kohandatud suvandid, mida selle lehtede komplekti puhul kasutatakse. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Määrake Google Analyticsi kohandatud suvandid, mida selle lehekomplekti puhul kasutatakse. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Määra selle lehtede kogumi puhul kasutatav Google Analytics'i ID.
