--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=برو به این نسخه
 go-to-workspace=رفتن به فضای کار (Automatic Translation)
 go-to-x=برو به {0}
 goal=هدف (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=گوگل تجزیه و تحلیل ایجاد روش تنها پیکربندی سفارشی (Automatic Translation)
 google-analytics-custom-configuration=گوگل تجزیه و تحلیل پیکربندی سفارشی (Automatic Translation)
 google-analytics-id=شناسه تجزیه و تحلیل گوگل
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=ترتیب نمایش صفحات زیردستی را تنظیم کنید.
 set-the-display-order-of-news-feeds=تنظیم ترتیب نمایش منابع خبری
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=مقادیر زیر را برای فیلتر کردن ایمیل‌هایی که مرتبط با آدرس ایمیل یک پوشه هستند را تنظیم کنید.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=تنظیم تجزیه و تحلیل گوگل ایجاد گزینه های سفارشی روش است که برای این مجموعه ای از صفحات استفاده می شود. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=گزینه های سفارشی Google Analytics را تنظیم کنید که برای این مجموعه از صفحات استفاده می شود. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=شناسه‌ی آنالیز گوگل را که برای این صفحات استفاده می‌شود را تنظیم نمایید.
