--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Siirry tähän versioon.
 go-to-workspace=Siirry Työtilaan
 go-to-x=Mene {0}
 goal=Tavoite
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics -luontimetodi Vain Mukautetussa Määrittelyssä
 google-analytics-custom-configuration=Google Analytics Mukautettu Määritys
 google-analytics-id=Google Analytics -ID
@@ -14499,6 +14501,8 @@ set-the-discount-amount-and-the-discount-type=Asettaa alennussumman ja alennusty
 set-the-display-order-of-child-pages=Alisivujen esitysjärjestys.
 set-the-display-order-of-news-feeds=Aseta uutissyötteiden esitysjärjestys.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Aseta seuraavat arvot suodattaaksesi sähköpostit sähköpostiosoitteella kansioon.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Aseta Google Analyticsin luontimenetelmän mukautetut valinnat, joita käytetään tälle sivujoukolle.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Aseta Google Analyticsin mukautetut valinnat, joita käytetään tälle sivujoukolle.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Aseta Google Analytics ID jota käytetään näille sivuille.
