--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Ugrás ehhez a változathoz
 go-to-workspace=Ugrás a munkaterületre
 go-to-x=Ugrás ide: {0}
 goal=Cél
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics létrehozási módszer egyéni konfigurációja
 google-analytics-custom-configuration=Google Analytics egyéni konfigurációja
 google-analytics-id=Google Analytics felhasználói azonosító
@@ -14503,6 +14505,8 @@ set-the-discount-amount-and-the-discount-type=Állítsd be a kedvezmény összeg
 set-the-display-order-of-child-pages=Gyerek-oldalak megjelenési sorrendjének beállítása.
 set-the-display-order-of-news-feeds=Hírcsatornák megjelenési sorrendjének beállítása.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Állítsd be a következő értékeket az e-mailek mappákba szűréséhez.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Beállítja a Google Analytics létrehozási módszer ezekhez az oldalakhoz használt egyéni lehetőségeit.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics egyéni lehetőségek beállítása.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics ID beállítása.
