--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=עבור לגרסה זו
 go-to-workspace=עבור לסביבת עבודה (Automatic Translation)
 go-to-x=עבור ל-{0}
 goal=מטרה (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=גוגל אנליטיקס ליצור שיטה בלבד תצורה מותאמת אישית (Automatic Translation)
 google-analytics-custom-configuration=תצורה מותאמת אישית של Google Analytics (Automatic Translation)
 google-analytics-id=מזהה Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=הגדר את סכום ההנחה 
 set-the-display-order-of-child-pages=קבע סדר התצוגה של דפי הילדים.
 set-the-display-order-of-news-feeds=קבע סדר התצוגה של הזנות החדשות
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=קבע את הערכים הבאים כדי לסנן אימיילים המשויכים עם כתובת האימייל לתיקייה
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=הגדר את האפשרויות המותאמות אישית של Google Analytics המשמשות עבור קבוצת דפים זו. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=הגדר את האפשרויות המותאמות אישית של Google Analytics המשמשות עבור קבוצת דפים זו. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=הגדר את מזהה Google Analytics בו נעשה שימוש עבור קבוצת דפים זו.
