--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=ໄປຍັງເວີເຊີ້ນີ້
 go-to-workspace=Go to Workspace (Automatic Copy)
 go-to-x=Go to {0} (Automatic Copy)
 goal=Goal (Automatic Copy)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Create Method Only Custom Configuration (Automatic Copy)
 google-analytics-custom-configuration=Google Analytics Custom Configuration (Automatic Copy)
 google-analytics-id=ວິເຄາະໄອດີ ກູໂກ້
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=ກຳນົດການສັ່ງສະແດງຂອງໜ້າລູກ ຫຼືໜ້ານ້ອຍ
 set-the-display-order-of-news-feeds=ກຳນົດການສັ່ງສະແດງຂອງຂ່າວຟິດ໌
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=ກຳນົດມູນຄ່າຕໍ່ໄປນີ້ເປັນຕົວກອງອີເມວສາທາລະນະກັບທີ່ຢູ່ອີເມວໃນໂຟນເດີ້
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics create method's custom options that are used for this set of pages. (Automatic Copy)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics custom options that are used for this set of pages. (Automatic Copy)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=ກຳນົດການວິເຄາະໄອດີ Google ເພື່ອຈະໃຊ້ສຳລັບຕັ້ງຄ່າໜ້າ
