--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Eiti į šią versiją (Automatic Translation)
 go-to-workspace=Eiti į darbo sritį (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=tikslas (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration="Google Analytics" kūrimo metodas tik pasirinktinis konfigūravimas (Automatic Translation)
 google-analytics-custom-configuration="Google Analytics" tinkinta konfigūracija (Automatic Translation)
 google-analytics-id="Google Analytics" ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Nustatykite antrinių puslapių rodymo tvarką. (Automatic Translation)
 set-the-display-order-of-news-feeds=Nustatykite naujienų informacijos santraukų rodymo tvarką. (Automatic Translation)
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Nustatykite šias reikšmes, kad el. laiškai, susieti su el. pašto adresu, būtų filtruoti į aplanką. (Automatic Translation)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Nustatykite "Google Analytics" kūrimo metodo pasirinktines parinktis, naudojamas šiam puslapių rinkiniui. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Nustatykite "Google Analytics" pasirinktines parinktis, naudojamas šiam puslapių rinkiniui. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Nustatykite "Google Analytics" ID, naudojamą šiam puslapių rinkiniui. (Automatic Translation)
