--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Pergi ke Versi Ini (Automatic Translation)
 go-to-workspace=Pergi ke Ruang Kerja (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=Matlamat (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Buat Kaedah Hanya Konfigurasi Tersuai (Automatic Translation)
 google-analytics-custom-configuration=Konfigurasi Tersuai Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Tetapkan susunan paparan halaman kanak-kanak. (Automatic Translation)
 set-the-display-order-of-news-feeds=Tetapkan susunan paparan suapan berita. (Automatic Translation)
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Tetapkan nilai berikut untuk menapis e-mel yang dikaitkan dengan alamat e-mel kepada folder. (Automatic Translation)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Tetapkan Google Analytics mencipta pilihan tersuai kaedah yang digunakan untuk set halaman ini. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Tetapkan pilihan tersuai Google Analytics yang digunakan untuk set halaman ini. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Tetapkan ID Google Analytics yang digunakan untuk set halaman ini. (Automatic Translation)
