--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Gå til denne versjonen
 go-to-workspace=Gå til arbeidsflate
 go-to-x=Gå til {0}
 goal=mål (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Opprett metode Bare tilpasset konfigurasjon (Automatic Translation)
 google-analytics-custom-configuration=Egendefinert konfigurasjon for Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics-ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Angi visingsrekkefølgen til de underordnede sidene.
 set-the-display-order-of-news-feeds=Angi visningsrekkefølgen til nyhetsstrømmene.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Angi følgende verdier for å filtrere e-post relatert til en e-postadresse eller til en mappe.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Angi de egendefinerte alternativene for opprettingsmetoden for Google Analytics som brukes for dette settet med sider. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Angi egendefinerte Alternativer for Google Analytics som brukes for dette settet med sider. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Angi Google Analytics ID-en som skal benyttes på disse sidene.
