--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Naar deze versie
 go-to-workspace=Ga naar de werkruimte
 go-to-x=Ga naar {0}
 goal=Doel
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Alleen aangepaste configuratie voor maakmethoden van Google Analytics
 google-analytics-custom-configuration=Aangepaste configuratie Google Analytics
 google-analytics-id=Analytics-ID van Google
@@ -14503,6 +14505,8 @@ set-the-discount-amount-and-the-discount-type=Stel het kortingsbedrag en -type i
 set-the-display-order-of-child-pages=Weergavevolgorde van onderliggende pagina's instellen.
 set-the-display-order-of-news-feeds=Weergavevolgorde van newsfeeds instellen.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Stel de volgende waarden in om aan een bepaald e-mailadres gekoppelde berichten in een folder te plaatsen.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Stel de aangepaste opties voor maakmethoden van Google Analytics in die voor deze paginaset worden gebruikt.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Stel de aangepaste opties van Google Analytics in die voor deze paginaset worden gebruikt.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=De Google Analytics-ID instellen voor deze pagina's.
