--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Przejdź do tej wersji
 go-to-workspace=Przejdź do obszaru roboczego (Automatic Translation)
 go-to-x=Przejdź do {0}
 goal=Celem (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Konfiguracja niestandardowa tylko do tworzenia metody Google Analytics (Automatic Translation)
 google-analytics-custom-configuration=Konfiguracja niestandardowa Google Analytics (Automatic Translation)
 google-analytics-id=ID Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Ustaw kolejność wyświetlania stron potomnych.
 set-the-display-order-of-news-feeds=Ustaw kolejność kanałów z wiadomościami.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Aby filtrować wiadomości skojarzone z adresem e-mail do folderu, ustaw następujące wartości.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Ustaw niestandardowe opcje metody tworzenia Google Analytics, które są używane dla tego zestawu stron. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Ustaw niestandardowe opcje Google Analytics, które są używane dla tego zestawu stron. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Ustaw Google Analytics ID, które będzie używane z tym zestawem stron.
