--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Vá para esta versão
 go-to-workspace=Ir para o Local de Trabalho
 go-to-x=Ir para {0}
 goal=Objetivo
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Configuração de Personalização apenas para o Método de Criação do Google Analytics
 google-analytics-custom-configuration=Configuração Personalizada Google Analytics
 google-analytics-id=ID do Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Define o valor e tipo do desconto.
 set-the-display-order-of-child-pages=Configurar a ordem de disposição das páginas filhas.
 set-the-display-order-of-news-feeds=Configurar a ordem de disposição de feeds de notícias.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Configurar os seguintes valores para filtrar emails associados com um endereço e guardá-los em uma pasta.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Configurar as opções de personalização do método do Google Analytics que serão utilizadas por este grupo de páginas.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Configurar as opções de personalização do Google Analytics que serão utilizadas por este grupo de páginas.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Configurar o ID do Google Analytics que será utilizado por esse grupo de páginas.
