--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Ir para Esta Versão
 go-to-workspace=Vá para o Workspace (Automatic Translation)
 go-to-x=Ir para {0}
 goal=objetivo (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics criar método apenas configuração personalizada (Automatic Translation)
 google-analytics-custom-configuration=Configuração personalizada do Google Analytics (Automatic Translation)
 google-analytics-id=ID do Google Analytics
@@ -14502,6 +14504,8 @@ set-the-discount-amount-and-the-discount-type=Configure a quantia e o tipo do de
 set-the-display-order-of-child-pages=Configurar a ordem de apresentação das páginas filhas.
 set-the-display-order-of-news-feeds=Configurar a ordem de apresentação dos feeds de notícias.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Configurar os seguintes valores para filtrar emails associados com um endereço de email e guardá-los numa pasta.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Defina as opções personalizadas do método Google Analytics que são usadas para este conjunto de páginas. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Defina as opções personalizadas do Google Analytics que são usadas para este conjunto de páginas. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Configurar o ID do Google Analytics que será utilizado por esse grupo de páginas.
