--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Accesați această versiune (Automatic Translation)
 go-to-workspace=Accesați Spațiul de lucru (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=scop (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Configurare personalizată numai pentru metoda Google Analytics (Automatic Translation)
 google-analytics-custom-configuration=Configurare personalizată Google Analytics (Automatic Translation)
 google-analytics-id=ID Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Setaza ordinea de afisarea a paginilor copii.
 set-the-display-order-of-news-feeds=Seteaza ordinea de afisare a surselor ca stiri.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Seteaza valorile urmatoare pentru a a filtra email-uri asociate cu un director de adrese de email.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Setați opțiunile particularizate ale metodei Google Analytics care sunt utilizate pentru acest set de pagini. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Setați opțiunile particularizate Google Analytics utilizate pentru acest set de pagini. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Seteaza ID-ul de Google Analytics care va fi folosit pentru acest set de pagini.
