--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Prejsť na túto verziu
 go-to-workspace=Prejsť do pracovného priestoru (Automatic Translation)
 go-to-x=Prejsť na {0}
 goal=cieľ (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Vlastná konfigurácia služby Google Analytics Create Method Only (Automatic Translation)
 google-analytics-custom-configuration=Vlastná konfigurácia služby Google Analytics (Automatic Translation)
 google-analytics-id=ID Google Analytics
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Nastavte poradie zobrazenia dcérskych stránok.
 set-the-display-order-of-news-feeds=Nastavte poradie zobrazenia informačných kanálov správ.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Nastavte nasledujúce hodnoty pre filtrovanie e-mailov do zložky, asociovaných s e-mailovou adresou.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Nastavte vlastné možnosti metódy vytvorenia služby Google Analytics, ktoré sa používajú pre túto množinu stránok. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Nastavte vlastné možnosti služby Google Analytics, ktoré sa používajú pre túto množinu stránok. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Nastavte Google Analytics ID, ktoré sa použije pre túto sadu stránok.
