--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Pojdi na to različico (Automatic Translation)
 go-to-workspace=Pojdi v delovni prostor (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=cilj (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Ustvari samo konfiguracijo po meri (Automatic Translation)
 google-analytics-custom-configuration=Konfiguracija po meri storitve Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Nastavi vrstni red prikaza podrejenih strani.
 set-the-display-order-of-news-feeds=Nastavi vrstni red prikaza za vir novic.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Nastavi naslednje vrednosti za filtriranje e-pošte, ki je povezana z e-poštnim naslovom in mapo.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Nastavite možnosti za ustvarjanje metode Google Analytics po meri, ki se uporabljajo za ta nabor strani. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Nastavite možnosti po meri storitve Google Analytics, ki se uporabljajo za ta nabor strani. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Nastavi Google Analytics ID, ki se bo uporabljal za ta nabor strani.
