--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Gå till den här versionen
 go-to-workspace=Gå till arbetsytan
 go-to-x=Gå till {0}
 goal=Mål
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Skapa metod bara anpassad konfiguration i Google Analytics
 google-analytics-custom-configuration=Anpassad Google Analytics-konfiguration
 google-analytics-id=Google Analytics-ID
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Ange rabattbelopp och rabattyp. Om
 set-the-display-order-of-child-pages=Ange hur undersidorna ska visas.
 set-the-display-order-of-news-feeds=Ange hur nyheterna ska visas.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Ange följande värden för att filtrera e-post relaterade till en e-postadress till en mapp.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Ange anpassningsmöjligheter för att skapa metod i Google Analytics som används för de här sidorna.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Ange anpassningsmöjligheter för Google Analytics som används för de här sidorna.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Sätt Google Analytics ID som kommer användas för denna mängd sidor.
