--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Bu Sürüme Git (Automatic Translation)
 go-to-workspace=Çalışma Alanına Git (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=hedef (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics Yalnızca Özel Yapılandırma Yöntemi Oluştur (Automatic Translation)
 google-analytics-custom-configuration=Google Analytics Özel Yapılandırması (Automatic Translation)
 google-analytics-id=Google Analytics Kimliği (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Alt sayfaların görüntülenme sırasını seçiniz.
 set-the-display-order-of-news-feeds=Haber beslemelerinin görüntülenme sırasını seçiniz.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Bir e-posta adresiyle ilişkilendirilmiş e-postaları filtrelemek için takip eden değerleri giriniz.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Google Analytics oluşturma yönteminin bu sayfa kümesi için kullanılan özel seçeneklerini ayarlayın. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Bu sayfa kümesi için kullanılan Google Analytics özel seçeneklerini ayarlayın. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Bu sayfalarda kullanılacak olan Google Analytics ID'sini ayarlayın.
