--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Перейти до цієї версії (Automatic Translat
 go-to-workspace=Перейти до робочої області (Automatic Translation)
 go-to-x=Go to {0} (Automatic Copy)
 goal=мета (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Google Analytics створює лише настроювану конфігурацію (Automatic Translation)
 google-analytics-custom-configuration=Настроювана конфігурація Google Analytics (Automatic Translation)
 google-analytics-id=Ідентифікатор Google Analytics (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Встановіть порядок показу дочірніх сторінок.
 set-the-display-order-of-news-feeds=Встановити порядок показу новин.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Встановіть наступні значення для відбопу поштових повідомлень в теки по адресу.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Установіть спеціальні параметри методу створення Google Analytics, які використовуються для цього набору сторінок. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Установіть спеціальні параметри Google Analytics, які використовуються для цього набору сторінок. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Встановіть Google Analytics ID, який буде використаний для цього набору сторінок.
