--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Đi tới phiên bản này
 go-to-workspace=Đi tới Không gian làm việc (Automatic Translation)
 go-to-x=Đi tới {0}
 goal=mục tiêu (Automatic Translation)
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
+google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
 google-analytics-create-custom-configuration=Cấu hình tùy chỉnh chỉ tạo phương pháp Google Analytics (Automatic Translation)
 google-analytics-custom-configuration=Cấu hình tùy chỉnh Google Analytics (Automatic Translation)
 google-analytics-id=Google Analytics ID (Automatic Translation)
@@ -14500,6 +14502,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Thiết lập thứ tự hiển thị các trang thành phần.
 set-the-display-order-of-news-feeds=Thiết lập thứ tự hiển thị các kênh xuất bản tin.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Thiết lập luật lọc thư điện tử được vào thư mục này.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Đặt tùy chọn tùy chỉnh của phương thức tạo Google Analytics được sử dụng cho nhóm trang này. (Automatic Translation)
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Đặt các tùy chọn tùy chỉnh Google Analytics được sử dụng cho tập hợp trang này. (Automatic Translation)
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Thiết lập Google Analytics ID sẽ được sử dụng cho các trang này.
